# fix-mojibake-zip

./: .prettierignore  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
.github/: dependabot.yml
.github/workflows/: build.yml  rust.yml
docs/: 404.html  index.html  index.txt
docs/404/: index.html
docs/_next/static/chunks/: 117-5b01990a62b49c8e.js  117-ac228927b55fa3a4.js  388.e9bc14263d24eb2f.js  480.72187ff24e1e4a71.js  480.7c51d864ff868fa9.js  480.c57947c5c7e2ca08.js  70.6c1b407957a0d434.js  881.5efbec28f72edda8.js  main-57b59fbb6a26e789.js  main-a84f8ad83e671585.js  main-app-d0e9214d7ccd1197.js  main-ebc1525fc1e75ea2.js  webpack-17ba8705f8edde25.js  webpack-84ab67fcc45a9ff0.js  webpack-ae86bfccde7b1be0.js
docs/_next/static/chunks/app/: layout-745b88ace181fd2b.js  page-00375ebc4f964d99.js  page-125bfa21f89ba60a.js  page-c925d7f1d7e5dc68.js  page-e48233a48d141045.js
docs/_next/static/chunks/app/create/: page-677d965c053a5e0d.js
docs/_next/static/chunks/app/extract/: page-b78de15b6e042c7a.js
docs/_next/static/css/: 00ffc16884a06da1.css  1e2779ed221f1d26.css  3c62cd01096c8509.css  b9fa0867307f0698.css  df121fa9cdcd081e.css  e2e72ea02c992ff5.css
docs/_next/static/media/: pna_bg.997e9dce.wasm  zip_wasm_bg.1e5cd8e8.wasm  zip_wasm_bg.7b491b6b.wasm
docs/create/: index.html  index.txt
docs/extract/: index.html  index.txt
pna_wasm/: LICENSE_MIT
pna_wasm/src/: lib.rs
src/app/: globals.css  layout.tsx  page.module.css  page.tsx
src/lib/: extractWorker.ts
zip_wasm/: .gitignore  Cargo.toml  LICENSE_MIT
zip_wasm/src/: lib.rs
