[package]
name = "zip_wasm"
version = "0.0.0"
authors = ["lbctsunekawa <85925063+laboctsunekawa@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/laboctsunekawa/fix-mojibake-zip.git"
description = "wasm zip"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.49"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.72", features = ["File"] }
zip = { version = "4.2.0", default-features = false, features = ["aes-crypto", "deflate", "deflate64", "lzma", "xz", "zstd"]}
encoding_rs = "0.8.35"
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
